Update to User name
asdasfas

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <!-- START OF TOP PART -->
         <img src="assets/imgs/nutriplan-logo.png" class="mx-auto mb-8 mt-4" width="300px">
-        <div class="p-8 text-center text-4xl">Hey there, <span id="username">User</span>!</div> <!-- USER ID -->
+        <div class="p-8 text-center text-4xl">Hey there, <span id="username">User Test</span>!</div> <!-- USER ID -->
         <div class="p-8 mx-auto w-2/3">
             <input class="bg-white focus:outline-none focus:shadow-outline border border-gray-300 rounded-lg py-2 px-4 block w-full appearance-none leading-normal" type="text" id="search" placeholder="Search food">
         </div>
