--- a/index.html
+++ b/index.html
@@ -7,27 +7,29 @@
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@0.5.7/chartjs-plugin-annotation.min.js"></script>
 </head>
 <body class="bg-gray-100">
     <div class="h-screen flex flex-col">
 
         <!-- START OF TOP PART -->
         <img src="assets/imgs/nutriplan-logo.png" class="mx-auto mb-8 mt-4" width="300px">
-        <div class="p-8 text-center text-4xl">Hey there, <span id="username">User Test</span>!</div> <!-- USER ID -->
+        <div class="p-8 text-center text-4xl">Hey theres, <span id="username">User Test</span>!</div> <!-- USER ID -->
         
         <label for="default-search" class="mb-2 text-sm font-medium text-gray-100 sr-only">Search</label>
         <div class="relative w-96 mx-auto">
             <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
                 <svg aria-hidden="true" class="w-5 h-5 text-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
             </div>
-            <input type="search" id="searchInput" class="block w-full p-4 pl-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-10" placeholder="Search Mockups, Logos..." required>
+            <input type="search" id="searchInput" class="block w-full p-4 pl-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-10" placeholder="Search for ingredients.." required>
             <button onclick="search()" type="submit" class="text-white absolute right-2.5 bottom-2.5 bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-4 py-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">Search</button>
         </div>
 
         <!-- END OF TOP PART -->
 
         <!-- START OF STATS -->
-        <div class="p-8 text-center text-2xl">Calories consumed: <span id="calories"></span></div> <!-- CALORIES ID -->
+        <canvas class="mt-6" id="caloriesChart"></canvas> <!-- CALORIES ID -->
         <div class="p-8 flex justify-center">
             <div class="text-center text-xl w-1/3">Fat: <span id="fat"></span></div> <!-- FAT ID -->
             <div class="text-center text-xl w-1/3">Carbs: <span id="carbs"></span></div> <!-- CARBS ID -->
