--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         <!-- START OF TOP PART -->
         <img src="assets/imgs/nutriplan-logo.png" class="mx-auto mb-8 mt-4" width="300px">
         
-        <label for="default-search" class="mb-2 text-sm font-medium text-gray-100 sr-only">Search</label>
+        <label for="default-search" class="mb-2 text-sm font-medium text-gray-100 sr-only">Sök</label>
         <div class="relative w-80 mx-auto mb-6">
             <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
                 <svg aria-hidden="true" class="w-5 h-5 text-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
             </div>
-            <input type="search" id="searchInput" class="block w-full p-4 pl-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-10" placeholder="Type ingredient..." required>
-            <button onclick="search()" type="submit" class="text-white absolute right-2.5 bottom-2.5 bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">Search</button>
+            <input type="search" id="searchInput" class="block w-full p-4 pl-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-10" placeholder="Sök på ingrediens..." required>
+            <button onclick="search()" type="submit" class="text-white absolute right-2.5 bottom-2.5 bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">Sök</button>
         </div>
         <!-- END OF TOP PART -->
 
@@ -37,7 +37,7 @@
         <div id="recipe-container">
             <ul id="recipe-list">
                 <li>
-                    <h1 class="mb-4 mt-12 text-md text-center font-bold leading-none tracking-tight text-gray-400 md:text-5xl lg:text-6xl dark:text-gray-400">Search for an ingredient to show recipies.</h1>
+                    <h1 class="mb-4 mt-12 text-md text-center font-bold leading-none tracking-tight text-gray-400 md:text-5xl lg:text-6xl dark:text-gray-400">Sök på en ingrediens för att visa recept mm.</h1>
                 </li>
             </ul>
         </div>
