--- a/aquamate.html
+++ b/aquamate.html
@@ -3,15 +3,15 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Waterintake/style.css">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    <title>Water Tracker</title>
+    <title>Aquamate</title>
   </head>
   <body class="bg-gray-800">
     <div class="h-screen">
 
       <div class="fixed mt-12 top-0 left-0 right-0 flex items-center justify-center">
-        <img class="w-64" src="assets/imgs/Aquamate-new.svg" alt="Gör någon fin logga till här">
+        <img class="w-64" src="Waterintake/assets/imgs/Aquamate-new.svg" alt="Gör någon fin logga till här">
       </div>
 
       <div class="flex flex-col items-center justify-center h-screen">
@@ -73,7 +73,7 @@
       
 
     </div>
-    <script src="script.js"></script>
+    <script src="Waterintake/script.js"></script>
   </body>
 </html>
 
