--- a/aquamate.html
+++ b/aquamate.html
@@ -5,7 +5,7 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="Waterintake/style.css">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    <title>Aquamate</title>
+    <title>-Aquamate-</title>
   </head>
   <body class="bg-gray-800">
     <div class="h-screen">
