--- a/aquamate.html
+++ b/aquamate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="WaterIntake\style.css">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
@@ -11,7 +11,7 @@
     <div class="h-screen">
 
       <div class="fixed mt-12 top-0 left-0 right-0 flex items-center justify-center">
-        <img class="w-64" src="WaterIntake\assets\imgs\Aquamate-new.svg" alt="Gör någon fin logga till här">
+        <img class="w-48" src="WaterIntake\assets\imgs\Aquamate-new.svg" alt="Gör någon fin logga till här">
       </div>
 
       <div class="flex flex-col items-center justify-center h-screen">
