--- a/aquamate.html
+++ b/aquamate.html
@@ -11,7 +11,7 @@
     <div class="h-screen">
 
       <div class="fixed mt-12 top-0 left-0 right-0 flex items-center justify-center">
-        <img class="w-48" src="WaterIntake\assets\imgs\Aquamate-new.svg" alt="Gör någon fin logga till här">
+        <img class="w-48" src="WaterIntake\assets\imgs\Aquamate-new.svg" alt="Aquamate logo">
       </div>
 
       <div class="flex flex-col items-center justify-center h-screen">
